Put old apidoc ui under '/admin'

--- a/www/app/views/doc/releaseNotes.scala.html
+++ b/www/app/views/doc/releaseNotes.scala.html
@@ -48,7 +48,7 @@
     <li> Let any org member delete an application /
         version. See <a href='@lib.Util.ApidocGitHubUrl/pull/412'>PR
         412</a></li>
-  
+
   </ul>
 
 <h3>0.11.10 - Feb 18 2016</h3>
@@ -72,11 +72,11 @@
     generated clients. In the play, ning and ruby clients, we also
     auto default the base Url when creating an instance of a new
     Client. </li>
-    
+
     <li> Added validation that if a path parameter is declared in a
     resource operation, that the path specified contains that
     parameter</li>
-    
+
   </ul>
 
 
@@ -216,7 +216,7 @@
     </li>
 
   </ul>
-      
+
 <h3>0.9.29 - Jun 29 2015</h3>
 
   <ul>
@@ -231,7 +231,7 @@
     </li>
 
   </ul>
-      
+
  <h3>0.9.25 - Jun 9 2015</h3>
 
   <ul>
@@ -267,7 +267,7 @@
 
     <pre>
       Version 0.0.1 has been uploaded for the application Gilt/Referral
-      
+
       Breaking changes
 
       enum activation_type value removed: order_placed
@@ -285,7 +285,7 @@
     &quot;@lib.Util.SubscriptionsText&quot; link in the navigation bar
     after selecting your organization and then subscribing to
     &quot;@lib.Util.SubscriptionsVersionsCreateText&quot;.
-    
+
     </li>
 
   </ul>
@@ -402,7 +402,7 @@
     drop down to select the type of file you are uploading (or leave
     blank and we will auto detect swagger based on a json document
     with a top level key named 'swagger').
-    
+
   </ul>
 
 <h3>0.8.27 - Mar 13 2015</h3>
@@ -512,7 +512,7 @@ are support for union types and imports.</p>
     module name in ruby. If you prefer to use the original non nested
     namespace, you can include &nbsp;namespace&nbsp; as an attribute
     in the <a href="@routes.DocController.apiJson">api.json</a> file you upload.</li>
- 
+
     <li>The scala method name geneators may generate new names in some
     cases. This is primarily a bug fix where in some cases the
     resource name was duplicated in the path name (e.g. in the play
@@ -654,7 +654,7 @@ are support for union types and imports.</p>
 
     <ol>
 
-      <li> <a href="/docs/apiJson">Declare your imports</a> your
+      <li> <a href="@routes.DocController.apiJson">Declare your imports</a> your
       api.json file by providing the full URI to each service.json
       specification you would like to include. To find the URL for a
       service from the UI, navigate to a service and then click
